@@ -134,9 +134,6 @@
           <artifactId>maven-surefire-plugin</artifactId>
           <version>3.0.0-M5</version>
             <configuration>
-                <argLine>
-                --add-opens bikeRentalApp.core/bikeRentalApp.core=ALL-UNNAMED --add-exports javafx.graphics/com.sun.javafx.application=ALL-UNNAMED
-                </argLine>
                 <source>1.8</source>
                 <target>1.8</target>
             </configuration>
@@ -177,6 +174,28 @@
           </configuration>
         </plugin>
 
+        <!-- Configure jacoco code coverage -->
+        <plugin>
+            <groupId>org.jacoco</groupId>
+            <artifactId>jacoco-maven-plugin</artifactId>
+            <version>0.8.7</version>
+            <executions>
+                <execution>
+                    <id>jacoco-prepare-agent</id>
+                    <phase>process-test-classes</phase>
+                    <goals>
+                        <goal>prepare-agent</goal>
+                    </goals>
+                </execution>
+                <execution>
+                    <id>jacoco-report</id>
+                    <phase>verify</phase>
+                    <goals>
+                        <goal>report</goal>
+                    </goals>
+                </execution>
+            </executions>
+        </plugin>
 
       </plugins>
     </pluginManagement>
